# nu_plugin_testing

./: Cargo.toml  README.md
src/: main.rs
