[package]
name = "nu_plugin_testing"
version = "0.1.0"
authors = ["Ryan Blecher <notryanb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.26.0"
nu-protocol = "0.26.0"
nu-source = "0.26.0"
nu-errors = "0.26.0"